--- a/Game/Game.csproj
+++ b/Game/Game.csproj
@@ -11,12 +11,14 @@
     <None Remove="Assets\Images\BasicZombie.png" />
     <None Remove="Assets\Images\Peashooter.png" />
     <None Remove="Assets\Images\Sunflower.png" />
+    <None Remove="Assets\Images\Wallnut.png" />
   </ItemGroup>
 
   <ItemGroup>
     <Resource Include="Assets\Images\BasicZombie.png" />
     <Resource Include="Assets\Images\Peashooter.png" />
     <Resource Include="Assets\Images\Sunflower.png" />
+    <Resource Include="Assets\Images\Wallnut.png" />
   </ItemGroup>
 
 </Project>
