--- a/Game/Game.csproj
+++ b/Game/Game.csproj
@@ -8,6 +8,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Assets\Images\ArmoredZombie.png" />
+    <None Remove="Assets\Images\background.png" />
     <None Remove="Assets\Images\BasicZombie.png" />
     <None Remove="Assets\Images\Peashooter.png" />
     <None Remove="Assets\Images\Sunflower.png" />
@@ -15,6 +17,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Resource Include="Assets\Images\ArmoredZombie.png" />
+    <Resource Include="Assets\Images\background.png" />
     <Resource Include="Assets\Images\BasicZombie.png" />
     <Resource Include="Assets\Images\Peashooter.png" />
     <Resource Include="Assets\Images\Sunflower.png" />
